--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         </table><br>
       <button onclick="next()" class="button" disabled>Start</button>
     </div>
-    <div id="q_text"  style="display: none" class="page page4">
+    <div id="q_text"  style="display: none" class="page page6">
       <h2>Write down all brands that you have seen in the previous Instagram feed with a comma between them.<br>
        <b>Attention:</b> Please consider each brand carefully. Your payment will based on plausible responses. </h2>
       <p>  
@@ -350,7 +350,7 @@
       </textarea><br>
       <button onclick="next()" class="button">Start</button>
     </div>
-    <div id="q_radio" style="display: none">
+    <div id="q_radio" style="display: none" class="page page7">
           <h2>Have you seen any of these brand logos in the previous Instagram feed?
         <b>Attention:</b> Please consider each brand carefully. Your payment will based on plausible responses. </h2>
 
