--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
       <input type="radio" required id="brand_focus_5" name="brand_focus" value="5" onchange="checkAnswers()">
       <label onclick="brand_focus_5.checked = true">strongly agree</label>
 
-      <button onclick="next(page2)" class="button" style="margin: 0 auto;display: block;" disabled>Continue with questionaire</button>
+      <button onclick="next()" class="button" style="margin: 0 auto;display: block;" disabled>Continue with questionaire</button>
     </div>
     <div id="att0"  style="display: none" class="page page3">
         <h2>Study Background</h2><br>
