--- a/static.html
+++ b/static.html
@@ -352,14 +352,14 @@
       <button class="button" style="margin: 0 auto;display: block;">Continue with questionnaire</button>
     </div>
     <div id="q_text"  style="display: none" class="page  hide">
-      <h2>Which brands appeared in the previous image? Please separate them by a comma between them.<br>
+      <h2>Which brands appeared in <b>instagram feed</b>>? Please separate them by a comma between them.<br>
        <b>Attention:</b> Please consider each brand carefully. Your payment will based on plausible responses. </h2>
       <p>  
       <textarea rows = "5" cols = "60" name = "description"></textarea><br>
       <button class="button" style="margin: 0 auto;display: block;">Continue with questionnaire</button>
     </div>
     <div id="q_radio" style="display: none" class="page hide">
-          <h2>Can you indicate which of the following brands appeared on the previous image?
+          <h2>Can you indicate which of the following brands appeared in the<b>instagram feed</b>?
         <b>Attention:</b> Please consider each brand carefully. Your payment will based on plausible responses. </h2>
 
         <table>
